Add cover image

--- a/home.html
+++ b/home.html
@@ -60,7 +60,7 @@
                         </div>
                      </div>
                   </div>
-                  <img src="assets/custom/2.1.0/images/layouts/michael/carousel/01.jpg" class="img-responsive" alt="01">
+                  <img src="image/cover01.jpg" class="img-responsive" alt="01">
                </div>
 
 
