--- a/home.html
+++ b/home.html
@@ -60,7 +60,7 @@
                         </div>
                      </div>
                   </div>
-                  <img src="image/cover01.jpg" class="img-responsive" alt="01">
+                  <img src="assets/custom/2.1.0/images/layouts/michael/carousel/04.jpg" class="img-responsive" alt="01">
                </div>
 
 
@@ -118,9 +118,9 @@
                <div class="row row-no-padding">
                   <div class="col-md-12 nopadding text-center">
                      <div class="dividewhite4"></div>
-                     <h2 class="font-accident-two-bold uppercase title">Gridus</h2>
+                     <h2 class="font-accident-two-bold uppercase title">Hello!</h2>
                      <div class="">
-                        <h5 class="font-accident-one-bold uppercase subtitle">Resume / curriculum vitae HTML Template</h5>
+                        <h5 class="font-accident-one-bold uppercase subtitle">I am Chang-Yi (Mike). Let's see who I am.</h5>
                         <div class="dividewhite6"></div>
                      </div>
                   </div>
@@ -133,12 +133,12 @@
                        data-animation-delay="500"
                        data-animation-distance="50px">
                      <div class="row">
-                        <div class="col-md-12"><i class="flaticon-photo246"></i></div>
+                        <div class="col-md-12"><i class="flaticon-insignia"></i></div>
                         <div class="col-md-12">
                            <div class="dividewhite1"></div>
-                           <h5 class="font-accident-one-bold uppercase">Clean & Flat</h5>
+                           <h5 class="font-accident-one-bold uppercase">Software Engineer</h5>
                            <p class="small">
-                              Gridus Personal Template is the simple, clean and stylish fully-responsive resume / curriculum vitae WordPress theme
+                              I want to be a software engineer who can make cool things and even change the world!
                            </p>
                         </div>
                      </div>
@@ -150,12 +150,12 @@
                        data-animation-delay="700"
                        data-animation-distance="50px">
                      <div class="row">
-                        <div class="col-md-12"><i class="flaticon-pie-graph"></i></div>
+                        <div class="col-md-12"><i class="flaticon-graduation61"></i></div>
                         <div class="col-md-12">
                            <div class="dividewhite1"></div>
-                           <h5 class="font-accident-one-bold uppercase">Optimized</h5>
+                           <h5 class="font-accident-one-bold uppercase">Major</h5>
                            <p class="small">
-                              It is perfect as a vCard, creative Portfolio or personal CV and resume website for artists, designers and job-seekers.
+                              Graduated from National Taiwan University, I major in Electraical Engineering and get the master degree.
                            </p>
                         </div>
                      </div>
@@ -167,12 +167,12 @@
                        data-animation-delay="900"
                        data-animation-distance="50px">
                      <div class="row">
-                        <div class="col-md-12"><i class="flaticon-clocks18"></i></div>
+                        <div class="col-md-12"><i class="flaticon-identification28"></i></div>
                         <div class="col-md-12">
                            <div class="dividewhite1"></div>
-                           <h5 class="font-accident-one-bold uppercase">Customizable</h5>
+                           <h5 class="font-accident-one-bold uppercase">Skills</h5>
                            <p class="small">
-                              The Ready-to-use pre-defined color css classes make possible to Customize your websire in a wide range.
+                              Familiar with C/C++, Java, and Python. Experience in socket programming, AI development, Android App designing.
                            </p>
                         </div>
                      </div>
@@ -184,12 +184,12 @@
                        data-animation-delay="1100"
                        data-animation-distance="50px">
                      <div class="row">
-                        <div class="col-md-12"><i class="flaticon-profile5"></i></div>
+                        <div class="col-md-12"><i class="flaticon-photo246"></i></div>
                         <div class="col-md-12">
                            <div class="dividewhite1"></div>
-                           <h5 class="font-accident-one-bold uppercase">Multi-purpose</h5>
+                           <h5 class="font-accident-one-bold uppercase">Hobby</h5>
                            <p class="small">
-                              Made for professionals, people who want to show their creative way to success. Share your experience with Gridus.
+                              Photographing, singing, and making some cool project like Raspberry Pi Car or Live Streaming Server.
                            </p>
                         </div>
                      </div>
@@ -227,28 +227,37 @@
 
             <div class="photo-caption flex-panel padding-50 text-center owl-carousel" data-section="owl-carousel">
                <div class="item">
-                  <h3 class="font-accident-one-normal">Highly Motivated</h3>
-                  <h5 class="font-accident-one-bold title hovercolor uppercase">perfect as a vCard or Portfolio</h5>
+                  <h3 class="font-accident-one-normal">Educational services</h3>
+                  <h5 class="font-accident-one-bold title hovercolor uppercase">08/2016 - Now (until 07/2017)</h5>
                   <p class="small">
-                     Gridus Personal Template is the simple, clean and stylish fully-responsive resume / curriculum vitae HTML template
+                    I am now enrolled in Substitute Service in Taiwan. My service type is Educational Substitute Services in Jinshan Elementary School, New Taipei City.
                   </p>
                   <div class="dividewhite2"></div>
                   <a class="photo-more"></a>
                </div>
                <div class="item">
-                  <h3 class="font-accident-one-normal">Premium & Simple</h3>
-                  <h5 class="font-accident-one-bold title hovercolor uppercase">Special for for artists, designers and job-seekers</h5>
+                  <h3 class="font-accident-one-normal">Intern of Software Engineer</h3>
+                  <h5 class="font-accident-one-bold title hovercolor uppercase">07/2015 – 09/2015</h5>
                   <p class="small">
-                     Perfect for showing your experience, skills, works, education, clients, expertise, services and awards.
+                     I was in summer intern in 2015, working on the project about an E-learning system. My job was to design the backend system with MongoDB with PHP.
                   </p>
                   <div class="dividewhite2"></div>
                   <a class="photo-more"></a>
                </div>
                <div class="item">
-                  <h3 class="font-accident-one-normal">Fully-responsive resume</h3>
-                  <h5 class="font-accident-one-bold title hovercolor uppercase">ideal for professional persons</h5>
+                  <h3 class="font-accident-one-normal">Network Admin</h3>
+                  <h5 class="font-accident-one-bold title hovercolor uppercase">09/2014 – 07/2016</h5>
                   <p class="small">
-                     Perfect for showing your experience, skills, works, education, clients, expertise, services and awards.
+                     I was the network admin in our lab during my master degree. My job was to maintain the lab’s website and manage the router and Wi-Fi environment.
+                  </p>
+                  <div class="dividewhite2"></div>
+                  <a class="photo-more"></a>
+               </div>
+               <div class="item">
+                  <h3 class="font-accident-one-normal">Assistant of Network Admin</h3>
+                  <h5 class="font-accident-one-bold title hovercolor uppercase">03/2014 – 02/2015</h5>
+                  <p class="small">
+                     I was the assistant of network admin at EE Dept., NTU. My job was to help fixing network problem and design an application for the department.
                   </p>
                   <div class="dividewhite2"></div>
                   <a class="photo-more"></a>
@@ -266,10 +275,10 @@
               data-animation-distance="200px">
 
             <div class="photo-caption flex-panel padding-50 text-center">
-               <h3 class="font-accident-one-normal">Creative & Experienced</h3>
-               <h5 class="font-accident-one-bold title hovercolor uppercase">Clean & Flat</h5>
+               <h3 class="font-accident-one-normal">Research Experience</h3>
+               <h5 class="font-accident-one-bold title hovercolor uppercase">Community Evolution Detection and Prediction</h5>
                <p class="small">
-                  Gridus Personal Template is the simple, clean and stylish fully-responsive resume / curriculum vitae HTML template
+                  My research during my master degree is Social Network Analysis. The topic is about tracking communities in social network, finding their evolution and predicting their evolution.
                </p>
                <div class="dividewhite2"></div>
                <a class="photo-more"></a>
@@ -404,90 +413,6 @@
    </section>
 
 
-   <section id="testmonials" class="container-fluid light bg-color01"
-            data-animation-origin="top"
-            data-animation-duration="500"
-            data-animation-delay="500"
-            data-animation-distance="25px">
-      <div class="padding-50">
-
-         <div class="dividewhite2"></div>
-
-         <div class="row">
-            <div class="col-md-6">
-               <div class="row">
-                  <div class="col-xs-3">
-                     <img src="assets/custom/2.1.0/images/layouts/michael/userpics/userpic04.jpg" alt="Rachel James Johnes" class="img-responsive author-userpic">
-                  </div>
-                  <div class="col-xs-9">
-                     <h5 class="font-accident-one-bold text-left uppercase">Hans Zimmer</h5>
-                     <p class="small color15">Apple Inc.</p>
-                     <p class="text-left small">
-                        With more devices come varying screen resolutions, definitions and orientations. New devices
-                        with new ...
-                     </p>
-                  </div>
-               </div>
-               <div class="divider-dynamic"></div>
-            </div>
-            <div class="col-md-6">
-               <div class="row">
-                  <div class="col-xs-3">
-                     <img src="assets/custom/2.1.0/images/layouts/michael/userpics/userpic02.jpg" alt="Rachel James Johnes" class="img-responsive author-userpic">
-                  </div>
-                  <div class="col-xs-9">
-                     <h5 class="font-accident-one-bold text-left uppercase">Mario Quinn</h5>
-                     <p class="small color15">Adobe</p>
-                     <p class="text-left small">
-                        With more devices come varying screen resolutions, definitions and orientations. New devices
-                        with new ...
-                     </p>
-                  </div>
-               </div>
-               <div class="divider-dynamic"></div>
-            </div>
-         </div>
-
-         <div class="dividewhite3"></div>
-
-         <div class="row">
-            <div class="col-md-6">
-               <div class="row">
-                  <div class="col-xs-3">
-                     <img src="assets/custom/2.1.0/images/layouts/michael/userpics/userpic03.jpg" alt="Rachel James Johnes" class="img-responsive author-userpic">
-                  </div>
-                  <div class="col-xs-9">
-                     <h5 class="font-accident-one-bold text-left uppercase">Karl Romm</h5>
-                     <p class="small color15">BMW</p>
-                     <p class="text-left small">
-                        With more devices come varying screen resolutions, definitions and orientations. New devices
-                        with new ...
-                     </p>
-                  </div>
-               </div>
-               <div class="divider-dynamic"></div>
-            </div>
-            <div class="col-md-6">
-               <div class="row">
-                  <div class="col-xs-3">
-                     <img src="assets/custom/2.1.0/images/layouts/michael/userpics/userpic05.jpg" alt="Rachel James Johnes" class="img-responsive author-userpic">
-                  </div>
-                  <div class="col-xs-9">
-                     <h5 class="font-accident-one-bold text-left uppercase">Maria Kim</h5>
-                     <p class="small color15">Lenovo</p>
-                     <p class="text-left small">
-                        With more devices come varying screen resolutions, definitions and orientations. New devices
-                        with new ...
-                     </p>
-                  </div>
-               </div>
-               <div class="divider-dynamic"></div>
-            </div>
-         </div>
-
-
-      </div>
-   </section>
 
 
 </div>
