Change 'service' into 'Service'

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
             <div class="photo-caption flex-panel padding-50 text-center owl-carousel" data-section="owl-carousel">
                <div class="item">
-                  <h3 class="font-accident-one-normal">Educational services</h3>
+                  <h3 class="font-accident-one-normal">Educational Services</h3>
                   <h5 class="font-accident-one-bold title hovercolor uppercase">08/2016 - Now (until 07/2017)</h5>
                   <p class="small">
                     I am now enrolled in Substitute Service in Taiwan. My service type is Educational Substitute Services in Jinshan Elementary School, New Taipei City.
