Modify timeline in resume.html, change photo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </div>
                      </div>
                   </div>
-                  <img src="assets/custom/2.1.0/images/layouts/michael/carousel/04.jpg" class="img-responsive" alt="01">
+                  <img src="image/01.jpg" class="img-responsive" alt="01">
                </div>
 
 
@@ -215,7 +215,7 @@
               data-animation-distance="200px">
 
             <div class="flex-panel">
-               <img src="assets/custom/2.1.0/images/layouts/michael/photos/01.jpg" class="img-responsive">
+               <img src="image/02.jpg" class="img-responsive">
             </div>
 
          </div>
@@ -434,9 +434,7 @@
          <div class="col-sm-3 cv-link">
             <h5 class="font-accident-two-normal uppercase">Download cv</h5>
             <div class="dividewhite1"></div>
-            <a href="#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>English</a>
-            <a href="#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>German</a>
-            <a href="#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>Spanish</a>
+            <a href="Chang_Yi_CV.pdf"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>English</a>
             <p class="inline-block">
                The CV is in .pdf format. Use the Adobe Reader to open it.
             </p>
