--- a/resume.html
+++ b/resume.html
@@ -30,6 +30,7 @@
    <link href="assets/custom/2.1.0/css/style.css" property='stylesheet' rel="stylesheet" type="text/css" media="screen"/>
    <link href="assets/custom/2.1.0/css/layouts/michael.css" property='stylesheet' rel="stylesheet" type="text/css" media="screen"/>
    <link href="assets/custom/2.1.0/css/colors/greyscale.css" id="color-styles" property='stylesheet' rel="stylesheet" type="text/css" media="screen"/>
+   <link href="mike.css" property='stylesheet' rel="stylesheet" type="text/css" media="screen"/>
 </head>
 
 <body id="michael" class="boxed">
@@ -60,7 +61,7 @@
                         </div>
                      </div>
                   </div>
-                  <img src="assets/custom/2.1.0/images/layouts/michael/carousel/01.jpg" class="img-responsive" alt="01">
+                  <img src="image/01.jpg" class="img-responsive" alt="01">
                </div>
 
 
@@ -320,19 +321,19 @@
 
             <ul class="timeline-vert timeline">
                <li>
-                  <div class="timeline-badge primary"><i class="flaticon-clocks18"></i></div>
+                  <div class="timeline-badge primary"><i class="flaticon-graduation61"></i></div>
                   <div class="timeline-panel"
                        data-animation-origin="left"
                        data-animation-duration="400"
                        data-animation-delay="400"
                        data-animation-distance="25px">
-                     <p class="timeline-time fontcolor-invert">Aug 2010 - Nov 2012</p>
-                     <div class="timeline-photo timeline-michael-01"></div>
+                     <p class="timeline-time fontcolor-invert">Sep 2007 - Jun 2010</p>
+                     <div class="timeline-photo timeline-mike-01"></div>
                      <div class="timeline-heading">
-                        <h4 class="font-accident-two-normal uppercase">Bluepixel LLC, London</h4>
-                        <h6 class="uppercase">Junior Designer</h6>
+                        <h4 class="font-accident-two-normal uppercase">HSNU, Taipei</h4>
+                        <h6 class="uppercase">High School Student</h6>
                         <p>
-                           There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
+                           I entered HSNU, The Affiliated Senior High School of National Taiwan Normal University, and joined the Computer Research Club. I started to learn programming, and finished my first application: Sudoku Generator.
                         </p>
                      </div>
                   </div>
@@ -344,49 +345,67 @@
                        data-animation-duration="400"
                        data-animation-delay="400"
                        data-animation-distance="25px">
-                     <p class="timeline-time fontcolor-invert">March 2013 - Jan 2014</p>
-                     <div class="timeline-photo timeline-michael-02"></div>
+                     <p class="timeline-time fontcolor-invert">Sep 2010 - Jun 2014</p>
+                     <div class="timeline-photo timeline-mike-02"></div>
                      <div class="timeline-heading">
-                        <h4 class="font-accident-two-normal uppercase">Rocket Media, Berlin</h4>
-                        <h6 class="uppercase">Senior Designer</h6>
+                        <h4 class="font-accident-two-normal uppercase">National Taiwan University, Taipei</h4>
+                        <h6 class="uppercase">Bachelor of Science</h6>
                         <p>
-                           There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
+                           I studied in National Taiwan University, majored in Electrical Engineering. The courses such as <i>Computer Programming</i>, <i>Data Structure and Programming</i>, and <i>Networking and Multimedia Lab</i>, enhanced my programming skills. I was trained to be a good engineer.
                         </p>
                      </div>
                   </div>
                </li>
                <li>
+                  <div class="timeline-badge danger"><i class="flaticon-graduation61"></i></div>
+                  <div class="timeline-panel"
+                       data-animation-origin="left"
+                       data-animation-duration="400"
+                       data-animation-delay="400"
+                       data-animation-distance="25px">
+                     <p class="timeline-time fontcolor-invert">Sep 2014 - Jul 2016</p>
+                     <div class="timeline-photo timeline-mike-03"></div>
+                     <div class="timeline-heading">
+                        <h4 class="font-accident-two-normal uppercase">National Taiwan University, Taipei</h4>
+                        <h6 class="uppercase">Master of Science</h6>
+                        <p>
+                           My master thesis is about Social Network Analysis. The thesis topci is <i>Community Evolution Detection and Prediction in Online Social Network</i>.
+                        </p>
+                     </div>
+                  </div>
+               </li>
+               <li class="timeline-inverted">
+                  <div class="timeline-badge warning"><i class="flaticon-pens15"></i></div>
+                  <div class="timeline-panel"
+                       data-animation-origin="right"
+                       data-animation-duration="400"
+                       data-animation-delay="400"
+                       data-animation-distance="25px">
+                     <p class="timeline-time fontcolor-invert">Jul 2015 - Sep 2015</p>
+                     <div class="timeline-photo timeline-mike-00"></div>
+                     <div class="timeline-heading">
+                        <h4 class="font-accident-two-normal uppercase">Flysun Development Co., Ltd</h4>
+                        <h6 class="uppercase">Summer Intern of Software Engineer</h6>
+                        <p>
+                        </p>
+                     </div>
+                  </div>
+               </li>
+
+               <li class="info">
                   <div class="timeline-badge danger"><i class="flaticon-pens15"></i></div>
                   <div class="timeline-panel"
                        data-animation-origin="left"
                        data-animation-duration="400"
                        data-animation-delay="400"
                        data-animation-distance="25px">
-                     <p class="timeline-time fontcolor-invert">Jul 2014 - Sep 2015</p>
-                     <div class="timeline-photo timeline-michael-03"></div>
+                     <p class="timeline-time fontcolor-invert">Aug 2016 - ...</p>
+                     <div class="timeline-photo timeline-mike-04"></div>
                      <div class="timeline-heading">
-                        <h4 class="font-accident-two-normal uppercase">Digital Frog, Wien</h4>
-                        <h6 class="uppercase">Art Director</h6>
+                        <h4 class="font-accident-two-normal uppercase">Jinshan Elementary School, New Taipei City</h4>
+                        <h6 class="uppercase">Educational Service</h6>
                         <p>
-                           There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
-                        </p>
-                     </div>
-                  </div>
-               </li>
-               <li class="timeline-inverted info">
-                  <div class="timeline-badge warning"><i class="flaticon-profile5"></i></div>
-                  <div class="timeline-panel"
-                       data-animation-origin="right"
-                       data-animation-duration="400"
-                       data-animation-delay="400"
-                       data-animation-distance="25px">
-                     <p class="timeline-time fontcolor-invert">Sep 2015 - ...</p>
-                     <div class="timeline-photo timeline-michael-04"></div>
-                     <div class="timeline-heading">
-                        <h4 class="font-accident-two-normal uppercase">Melted Digital, Paris</h4>
-                        <h6 class="uppercase">Head of UX Department</h6>
-                        <p>
-                           There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
+                           I am now enrolled in Substitute Service in Taiwan. My service type is Educational Substitute Services. The service will last for about 11 months and end at July 22, 2017.
                         </p>
                      </div>
                   </div>
@@ -431,9 +450,7 @@
          <div class="col-sm-3 cv-link">
             <h5 class="font-accident-two-normal uppercase">Download cv</h5>
             <div class="dividewhite1"></div>
-            <a href="#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>English</a>
-            <a href="#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>German</a>
-            <a href="#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>Spanish</a>
+            <a href="Chang_Yi_CV.pdf"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>English</a>
             <p class="inline-block">
                The CV is in .pdf format. Use the Adobe Reader to open it.
             </p>
