--- a/index.html
+++ b/index.html
@@ -67,29 +67,23 @@
 
 
             </div>
-            <div class="e-divider-6"></div>
+            <div class="e-divider-4"></div>
          </section>
          <!-- /Carousel -->
          <div class="col-md-12 vc-name nopadding" id="more">
 
             <ul id="nav" class="row nopadding cd-side-navigation">
-               <li class="col-xs-4 col-sm-2 nopadding menuitem ui-menu-color01" data-animation-duration="1000" data-animation-delay="100">
+               <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color01" data-animation-duration="1000" data-animation-delay="100">
                   <a href="index.html" class="hvr-sweep-to-bottom"><i class="flaticon-insignia"></i><span>home</span></a>
                </li>
-               <li class="col-xs-4 col-sm-2 nopadding menuitem ui-menu-color02" data-animation-duration="1000" data-animation-delay="300">
+               <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color02" data-animation-duration="1000" data-animation-delay="300">
                   <a href="resume.html" class="hvr-sweep-to-bottom"><i class="flaticon-graduation61"></i><span>resume</span></a>
                </li>
-               <li class="col-xs-4 col-sm-2 nopadding menuitem ui-menu-color03" data-animation-duration="1000" data-animation-delay="500">
-                  <a href="portfolio-4-col.html" class="hvr-sweep-to-bottom"><i class="flaticon-book-bag2"></i><span>portfolio</span></a>
+               <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color03" data-animation-duration="1000" data-animation-delay="500">
+                  <a href="portfolio-4-col.html" class="hvr-sweep-to-bottom"><i class="flaticon-book-bag2"></i><span>project</span></a>
                </li>
-               <li class="col-xs-4 col-sm-2 nopadding menuitem ui-menu-color04" data-animation-duration="1000" data-animation-delay="700">
+               <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color04" data-animation-duration="1000" data-animation-delay="700">
                   <a href="contacts.html" class="hvr-sweep-to-bottom"><i class="flaticon-placeholders4"></i><span>contacts</span></a>
-               </li>
-               <li class="col-xs-4 col-sm-2 nopadding menuitem ui-menu-color05" data-animation-duration="1000" data-animation-delay="900">
-                  <a href="feedback.html" class="hvr-sweep-to-bottom"><i class="flaticon-earphones18"></i><span>feedback</span></a>
-               </li>
-               <li class="col-xs-4 col-sm-2 nopadding menuitem ui-menu-color06" data-animation-duration="1000" data-animation-delay="1100">
-                  <a href="blog-3-col.html" class="hvr-sweep-to-bottom"><i class="flaticon-pens15"></i><span>blog</span></a>
                </li>
             </ul>
 
@@ -139,7 +133,7 @@
                            <div class="dividewhite1"></div>
                            <h5 class="font-accident-one-bold uppercase">Software Engineer</h5>
                            <p class="small">
-                              I want to be a software engineer who can make cool things and even change the world!
+                              I want to be a software engineer who can make cool things and change the world!
                            </p>
                         </div>
                      </div>
@@ -301,117 +295,7 @@
 
    </section>
 
-   <section id="circle-skills" class="container-fluid dark ui-block-color02" data-section="progress"
-            data-animation-origin="right"
-            data-animation-duration="400"
-            data-animation-delay="600"
-            data-animation-distance="200px">
-
-      <div class="row">
-
-         <div class="col-md-12 nopadding">
-
-            <div class="padding-50 text-center">
-               <div class="dividewhite8"></div>
-               <h3 class="font-accident-two-bold uppercase title">Programming Languages</h3>
-               <div class="">
-                  <h5 class="font-accident-one-bold uppercase subtitle"></h5>
-                  <div class="dividewhite3"></div>
-               </div>
-               <div class="row text-center">
-
-                  <div class="col-md-3 col-sm-6 col-xs-12 nopadding">
-                     <div class="progressbar semicircle text-center">
-                        <div id="circle1"
-                             data-progressbar="semicircle"
-                             data-progressbar-color="#fff"
-                             data-progressbar-trailcolor="#676767"
-                             data-progressbar-to='{"color": "#51f2ec", "width": 4}'
-                             data-progressbar-from='{"color": "#3498db", "width": 4}'
-                             data-progressbar-value="1.00">
-                        </div>
-                        <div class="dividewhite3"></div>
-                        <h4 class="font-accident-one-normal uppercase">C/C++</h4>
-                        <div class="dividewhite1"></div>
-                        <p class="small">
-                           Strong ability in C/C++. More than 10 years experience in learning and developing with C/C++.
-                        </p>
-
-                     </div>
-                     <div class="dividewhite1"></div>
-                  </div>
-
-                  <div class="col-md-3 col-sm-6 col-xs-12 nopadding">
-                     <div class="progressbar semicircle text-center">
-                        <div id="circle2"
-                             data-progressbar="semicircle"
-                             data-progressbar-color="#fff"
-                             data-progressbar-trailcolor="#676767"
-                             data-progressbar-to='{"color": "#ffd200", "width": 4}'
-                             data-progressbar-from='{"color": "#3498db", "width": 4}'
-                             data-progressbar-value="0.80">
-                        </div>
-                        <div class="dividewhite3"></div>
-                        <h4 class="font-accident-one-normal uppercase">Java</h4>
-                        <div class="dividewhite1"></div>
-                        <p class="small">
-                           Farmiliar with Java. Have experience in developing Android Application with Java and Android SDK. Have experience in developing chatroom application with Java.
-                        </p>
-
-                     </div>
-                     <div class="dividewhite1"></div>
-                  </div>
-
-                  <div class="col-md-3 col-sm-6 col-xs-12 nopadding">
-                     <div class="progressbar semicircle text-center">
-                        <div id="circle3"
-                             data-progressbar="semicircle"
-                             data-progressbar-color="#fff"
-                             data-progressbar-trailcolor="#676767"
-                             data-progressbar-to='{"color": "#47c091", "width": 4}'
-                             data-progressbar-from='{"color": "#3498db", "width": 4}'
-                             data-progressbar-value="0.80">
-                        </div>
-                        <div class="dividewhite3"></div>
-                        <h4 class="font-accident-one-normal uppercase">Python</h4>
-                        <div class="dividewhite1"></div>
-                        <p class="small">
-                           Familiar with Python. Use Python in daily life: parsing documents and doing some simple calculating. Have experience in perform Machine Learning algorithm with Python and its libraries.
-                        </p>
-
-                     </div>
-                     <div class="dividewhite1"></div>
-                  </div>
-
-                  <div class="col-md-3 col-sm-6 col-xs-12 nopadding">
-                     <div class="progressbar semicircle text-center">
-                        <div id="circle4"
-                             data-progressbar="semicircle"
-                             data-progressbar-color="#fff"
-                             data-progressbar-trailcolor="#676767"
-                             data-progressbar-to='{"color": "#d37242", "width": 4}'
-                             data-progressbar-from='{"color": "#3498db", "width": 4}'
-                             data-progressbar-value="0.70">
-                        </div>
-                        <div class="dividewhite3"></div>
-                        <h4 class="font-accident-one-normal uppercase">javascript</h4>
-                        <div class="dividewhite1"></div>
-                        <p class="small">
-                           Use javacript with jQuery for creating website.
-                        </p>
-
-                     </div>
-                     <div class="dividewhite1"></div>
-                  </div>
-
-               </div>
-               <div class="dividewhite8"></div>
-            </div>
-         </div>
-
-      </div>
-
-   </section>
+   
 
 
 
