--- a/contacts.html
+++ b/contacts.html
@@ -101,23 +101,17 @@
          <div class="col-md-12 vc-name nopadding">
 
             <ul id="nav" class="row nopadding cd-side-navigation">
-               <li class="col-xs-4 col-sm-2 nopadding menuitem ui-menu-color01" data-animation-duration="1000" data-animation-delay="100">
+               <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color01" data-animation-duration="1000" data-animation-delay="100">
                   <a href="index.html" class="hvr-sweep-to-bottom"><i class="flaticon-insignia"></i><span>home</span></a>
                </li>
-               <li class="col-xs-4 col-sm-2 nopadding menuitem ui-menu-color02" data-animation-duration="1000" data-animation-delay="300">
+               <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color02" data-animation-duration="1000" data-animation-delay="300">
                   <a href="resume.html" class="hvr-sweep-to-bottom"><i class="flaticon-graduation61"></i><span>resume</span></a>
                </li>
-               <li class="col-xs-4 col-sm-2 nopadding menuitem ui-menu-color03" data-animation-duration="1000" data-animation-delay="500">
-                  <a href="portfolio-4-col.html" class="hvr-sweep-to-bottom"><i class="flaticon-book-bag2"></i><span>portfolio</span></a>
+               <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color03" data-animation-duration="1000" data-animation-delay="500">
+                  <a href="portfolio-4-col.html" class="hvr-sweep-to-bottom"><i class="flaticon-book-bag2"></i><span>project</span></a>
                </li>
-               <li class="col-xs-4 col-sm-2 nopadding menuitem ui-menu-color04" data-animation-duration="1000" data-animation-delay="700">
+               <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color04" data-animation-duration="1000" data-animation-delay="700">
                   <a href="contacts.html" class="hvr-sweep-to-bottom"><i class="flaticon-placeholders4"></i><span>contacts</span></a>
-               </li>
-               <li class="col-xs-4 col-sm-2 nopadding menuitem ui-menu-color05" data-animation-duration="1000" data-animation-delay="900">
-                  <a href="feedback.html" class="hvr-sweep-to-bottom"><i class="flaticon-earphones18"></i><span>feedback</span></a>
-               </li>
-               <li class="col-xs-4 col-sm-2 nopadding menuitem ui-menu-color06" data-animation-duration="1000" data-animation-delay="1100">
-                  <a href="blog-3-col.html" class="hvr-sweep-to-bottom"><i class="flaticon-pens15"></i><span>blog</span></a>
                </li>
             </ul>
 
@@ -144,13 +138,13 @@
                 data-animation-origin="right"
                 data-animation-duration="400"
                 data-animation-delay="200"
-                data-animation-distance="50px">Made for Creative Professionals</h5>
+                data-animation-distance="50px">The way you can find me.</h5>
             <p class="small color01"
                data-animation-origin="right"
                data-animation-duration="400"
                data-animation-delay="300"
                data-animation-distance="50px">
-               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id metus purus. Ut vulputate, est vel tincidunt mattis, orci neque iaculis lectus, et interdum quam felis vel tortor. Fusce ultrices dui quis nunc dignissim faucibus. Ut ac odio quis nibh viverra fringilla ac id nisi. Suspendisse tincidunt augue quis ligula cursus, non efficitur ligula faucibus. Mauris id neque maximus, tincidunt metus et, sodales nulla.
+               
             </p>
          </div>
       </section>
@@ -170,11 +164,11 @@
                   </div>
                   <div class="row">
                      <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Phone:</span></div>
-                     <div class="col-sm-10"><p class="small">1 234 567-64-35</p></div>
+                     <div class="col-sm-10"><p class="small">+886-912890956</p></div>
                   </div>
                   <div class="row">
-                     <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Skype:</span></div>
-                     <div class="col-sm-10"><p class="small">@samanderson</p></div>
+                     <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Email:</span></div>
+                     <div class="col-sm-10"><p class="small"><a href="mailto:mikechen1199@gmail.com">mikechen1199@gmail.com</a></p></div>
                   </div>
                </div>
                <div class="col-md-6"
@@ -184,15 +178,15 @@
                     data-animation-distance="25px">
                   <div class="row">
                      <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Twitter:</span></div>
-                     <div class="col-sm-10"><p class="small"><a href="#!">https://twitter.com/samanderson</a></p></div>
+                     <div class="col-sm-10"><p class="small"><a href="https://twitter.com/b99901026">https://twitter.com/b99901026</a></p></div>
                   </div>
                   <div class="row">
                      <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Facbook:</span></div>
-                     <div class="col-sm-10"><p class="small"><a href="#!">https://www.facebook.com/samanderson</a></p></div>
+                     <div class="col-sm-10"><p class="small"><a href="https://www.facebook.com/profile.php?id=100001333325749">https://www.facebook.com/profile.php?id=100001333325749</a></p></div>
                   </div>
                   <div class="row">
-                     <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Linkedin:</span></div>
-                     <div class="col-sm-10"><p class="small"><a href="#!">https://www.linkedin.com/samanderson</a></p></div>
+                     <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Flickr:</span></div>
+                     <div class="col-sm-10"><p class="small"><a href="https://www.flickr.com/photos/151140435@N04/">https://www.flickr.com/photos/151140435@N04/</a></p></div>
                   </div>
                </div>
             </div>
